Bindings/CEGUI/hBuild/include/ClassWindow.h

// Specifies whether this Window
void cegui_wnd_setDragDropTarget(struct hg3dclass_struct * thisclass_c, int setting_c);
// Invalidate the chain of rendering surfaces from this window backwards to ensure they get properly redrawn - but doing the minimum amount of work possibe - next render. 
void cegui_wnd_invalidateRenderingSurface(struct hg3dclass_struct * thisclass_c);
// Sets whether automatic
void cegui_wnd_setUsingAutoRenderingSurface(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set whether the Window
void cegui_wnd_setNonClientWindow(struct hg3dclass_struct * thisclass_c, const int setting_c);
// return whether text parsing is enabled for this window. 
void cegui_wnd_isTextParsingEnabled(struct hg3dclass_struct * thisclass_c, int * result_c);
// set whether text parsing is enabled for this window. 
void cegui_wnd_setTextParsingEnabled(struct hg3dclass_struct * thisclass_c, const int setting_c);
// Add the named property to the XML ban list for this window. 
void cegui_wnd_banPropertyFromXML(struct hg3dclass_struct * thisclass_c, char * property_name_c);
// Remove the named property from the XML ban list for this window. 
void cegui_wnd_unbanPropertyFromXML(struct hg3dclass_struct * thisclass_c, char * property_name_c);
// Return whether the named property is banned from XML. 
void cegui_wnd_isPropertyBannedFromXML(struct hg3dclass_struct * thisclass_c, char * property_name_c, int * result_c);
// Set the window update mode. This mode controls the behaviour of the Window::update
void cegui_wnd_setUpdateMode(struct hg3dclass_struct * thisclass_c, const enum EnumWindowUpdateMode mode_c);
// Return the current window update mode that is set for this WindowWindow::update
void cegui_wnd_getUpdateMode(struct hg3dclass_struct * thisclass_c, enum EnumWindowUpdateMode * result_c);
// Set whether mouse input that is not directly handled by this WindowWindow
void cegui_wnd_setMouseInputPropagationEnabled(struct hg3dclass_struct * thisclass_c, const int enabled_c);
// Return whether mouse input that is not directly handled by this WindowWindow
void cegui_wnd_isMouseInputPropagationEnabled(struct hg3dclass_struct * thisclass_c, int * result_c);
// Clones this Window
void cegui_wnd_clone(struct hg3dclass_struct * thisclass_c, char * newName_c, const int deepCopy_c, struct hg3dclass_struct * result_c);
// copies this widget's properties to given target widget 
void cegui_wnd_clonePropertiesTo(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * target_c);
// copies this widget's child widgets to given target widget 
void cegui_wnd_cloneChildWidgetsTo(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * target_c);
// Return the (visual) z index of the window on it's parent. 
void cegui_wnd_getZIndex(struct hg3dclass_struct * thisclass_c, int * result_c);
// Return whether /a this Window
void cegui_wnd_isInFront(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * wnd_c, int * result_c);
// Return whether /a this Window
void cegui_wnd_isBehind(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * wnd_c, int * result_c);
// return the Window
void cegui_wnd_getCaptureWindow(struct hg3dclass_struct * result_c);