Bindings/CEGUI/hBuild/HGamer3D/Bindings/CEGUI/ClassWindow.chs


{- function setDragDropTarget -}
{#fun cegui_wnd_setDragDropTarget as setDragDropTarget 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function invalidateRenderingSurface -}
{#fun cegui_wnd_invalidateRenderingSurface as invalidateRenderingSurface 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setUsingAutoRenderingSurface -}
{#fun cegui_wnd_setUsingAutoRenderingSurface as setUsingAutoRenderingSurface 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setNonClientWindow -}
{#fun cegui_wnd_setNonClientWindow as setNonClientWindow 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function isTextParsingEnabled -}
{#fun cegui_wnd_isTextParsingEnabled as isTextParsingEnabled 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function setTextParsingEnabled -}
{#fun cegui_wnd_setTextParsingEnabled as setTextParsingEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function banPropertyFromXML -}
{#fun cegui_wnd_banPropertyFromXML as banPropertyFromXML 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function unbanPropertyFromXML -}
{#fun cegui_wnd_unbanPropertyFromXML as unbanPropertyFromXML 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function isPropertyBannedFromXML -}
{#fun cegui_wnd_isPropertyBannedFromXML as isPropertyBannedFromXML 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function setUpdateMode -}
{#fun cegui_wnd_setUpdateMode as setUpdateMode 
{ withHG3DClass* `HG3DClass' ,
 cIntFromEnum `EnumWindowUpdateMode' } -> `()'  #}

{- function getUpdateMode -}
{#fun cegui_wnd_getUpdateMode as getUpdateMode 
{ withHG3DClass* `HG3DClass' ,
 alloca- `EnumWindowUpdateMode' peekEnumUtil*} -> `()'  #}

{- function setMouseInputPropagationEnabled -}
{#fun cegui_wnd_setMouseInputPropagationEnabled as setMouseInputPropagationEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function isMouseInputPropagationEnabled -}
{#fun cegui_wnd_isMouseInputPropagationEnabled as isMouseInputPropagationEnabled 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function clone -}
{#fun cegui_wnd_clone as clone 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 fromBool `Bool' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function clonePropertiesTo -}
{#fun cegui_wnd_clonePropertiesTo as clonePropertiesTo 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function cloneChildWidgetsTo -}
{#fun cegui_wnd_cloneChildWidgetsTo as cloneChildWidgetsTo 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function getZIndex -}
{#fun cegui_wnd_getZIndex as getZIndex 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Int' peekIntConv*} -> `()'  #}

{- function isInFront -}
{#fun cegui_wnd_isInFront as isInFront 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isBehind -}
{#fun cegui_wnd_isBehind as isBehind 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getCaptureWindow -}
{#fun cegui_wnd_getCaptureWindow as getCaptureWindow 
{ alloca- `HG3DClass' peek*} -> `()'  #}

